# Glitch-IDE

./: CMakeLists.txt  EditorPane.h  README.md  TextEditor.cpp  TextEditor.h  build.bat  build_gui.bat  create_shortcut.bat  icon.txt  main.cpp  resources.rc  vim_editor.cpp
